src/objects/Apttus_Config2__LineItemRollup__c/Apttus_Config2__LineItemRollup__c.object-meta.xml
<CustomObject>
    <description>Holds rollup summary custom fields</description>
    <label>Line Item Rollup</label>
    <nameField>
        <label>Line Item Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Item Rollups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>