src/objects/Apttus_Config2__LineItemRollup__c/fields/POLNAR__c.field-meta.xml
<CustomField>
    <fullName>POLNAR__c</fullName>
    <label>SumPOLNARAdditional LT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>