src/objects/Apttus_Config2__LineItemRollup__c/fields/Rollup_FGLTB__c.field-meta.xml
<CustomField>
    <fullName>Rollup_FGLTB__c</fullName>
    <label>Rollup FGLTB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>