src/objects/Apttus_Config2__LineItemRollup__c/fields/Rollup_SFPPLUS_FELTB__c.field-meta.xml
<CustomField>
    <fullName>Rollup_SFPPLUS_FELTB__c</fullName>
    <label>Rollup SFP+ FELTB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>