src/objects/Apttus_Config2__LineItemRollup__c/fields/Sum_of_8Port_16Port_POL__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_8Port_16Port_POL__c</fullName>
    <label>Sum of 8Port 16Port POL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>