src/objects/Apttus_Config2__LineItemRollup__c/fields/SUMPROD_1G_BASEX__c.field-meta.xml
<CustomField>
    <fullName>SUMPROD_1G_BASEX__c</fullName>
    <label>Sum Prod of 1000BASE-X</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>