src/objects/Apttus_Config2__LineItemRollup__c/fields/X7705_100_base__c.field-meta.xml
<CustomField>
    <fullName>X7705_100_base__c</fullName>
    <label>7705 100 base</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>