src/objects/Apttus_Config2__LineItemRollup__c/fields/X7705_SAR_A_Ax_Optics__c.field-meta.xml
<CustomField>
    <fullName>X7705_SAR_A_Ax_Optics__c</fullName>
    <label>7705 SAR-A_Ax Optics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>